Explain the workspace-immutability reason, drop the ineffective test
Reproducing GITHUB#20226 against cross-cluster-replication shows the write
does not come from the node process, whose working directory is the node's
own workingDir. It comes from the bin scripts: runOpenSearchBinScriptWithInput
sets the working directory to the distribution and passes the node
environment, so opensearch-keystore and opensearch-plugin run inside the
distribution while inheriting the node's JVM options. A relative option such
as -Xlog:gc*:file=logs/gc.log then resolves into Gradle's artifact transform
workspace, which Gradle 8.6+ validates as immutable.

Record that in the comment on canUseSharedDistribution(); the behaviour is
unchanged.

Also remove the functional test added earlier. It cannot fail: the fixture's
bin/opensearch is `exec echo "opensearch script executed!"` and never starts a
JVM, so no GC log is written in either code state and both cache assertions
pass on main as well. The only assertion that changed between states was
assertCustomDistro, which asserts the implementation rather than the property.
The reproduction recorded on the pull request carries the evidence instead.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Signed-off-by: Shrey Narayan <employeenextbrick@gmail.com>