@@ -596,8 +596,12 @@ public class OpenSearchNode implements TestClusterConfiguration {
     }
 
     private boolean canUseSharedDistribution() {
-        // A shared distribution lives in Gradle's immutable artifact transform cache. Copy it into workingDir so
-        // OpenSearch can write files such as logs without mutating the cache.
+        // The shared distribution is an artifact transform output. Gradle 8.6+ treats those workspaces as
+        // immutable and validates them, so a node must not run with its OPENSEARCH_HOME inside one. The bin
+        // scripts are executed with their working directory set to the distribution (see
+        // runOpenSearchBinScriptWithInput) while inheriting the node's JVM options, so a relative option such
+        // as -Xlog:gc*:file=logs/gc.log writes straight into the workspace. Always run from a node-local copy,
+        // which setupNodeDistribution() creates with hard links where the filesystem allows.
         return false;
     }
 
